--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vue": "^2.6.11",
         "vue-cli-plugin-element": "^1.0.1",
         "vue-router": "^3.5.1",
+        "vue-table-with-tree-grid": "^0.2.4",
         "vuex": "^3.6.2"
     },
     "devDependencies": {
