--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
         "file-loader": "^6.2.0",
         "less": "^3.9.0",
         "less-loader": "^4.1.0",
+        "lodash": "^4.17.11",
         "style-loader": "^2.0.0",
         "vue": "^2.6.11",
         "vue-cli-plugin-element": "^1.0.1",
+        "vue-quill-editor": "^3.0.6",
         "vue-router": "^3.5.1",
         "vue-table-with-tree-grid": "^0.2.4",
         "vuex": "^3.6.2"
