--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "babel-plugin-component": "^1.1.1",
         "core-js": "^3.6.5",
         "css-loader": "^5.2.6",
+        "echarts": "^4.1.0",
         "element-ui": "^2.6.3",
         "file-loader": "^6.2.0",
         "less": "^3.9.0",
